# ai-cv

./: .gitignore  pyproject.toml
cvs/: buzzword_red_flags.txt  junior_fresh_grad.txt  mid_level_iot.txt  senior_embedded_strong.txt  weak_mismatch.txt
profiles/: embedded_engineer.yaml
scripts/: probe_extract.py  probe_model.py  run_one.py  test_real_pdfs.py
src/ai_cv/: cli.py  grounding.py  llm.py  models.py  parser.py  profile_loader.py  prompts.py  report.py  scorer.py
tests/: conftest.py  test_grounding.py  test_llm.py  test_models.py  test_scorer_eval.py
